Microservices_K8/k8s-deployments/jenkins-server.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Jenkins EC2 Instance'

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID where Jenkins EC2 instance will be launched
  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet ID where Jenkins EC2 instance will be launched
  InstanceType:
    Type: String
    Default: t2.medium
    Description: EC2 instance type for Jenkins server
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance

Resources:
  JenkinsInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: ami-06d4b7182ac3480fa
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 20
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          SubnetId: !Ref SubnetId
          GroupSet:
            - !Ref JenkinsSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo yum update –y
          sudo wget -O /etc/yum.repos.d/jenkins.repo \
          https://pkg.jenkins.io/redhat-stable/jenkins.repo
          sudo rpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io-2023.key
          sudo yum upgrade
          sudo dnf install java-17-amazon-corretto -y
          sudo yum install git -y
          sudo yum install jenkins -y
          sudo systemctl enable jenkins
          sudo systemctl start jenkins
          sudo systemctl status jenkins
          sudo yum install docker -y
          sudo usermod -a -G docker ec2-user
          newgrp docker
          sudo yum install python3-pip -y
          pip3 install --user docker-compose -y
          sudo systemctl enable docker.service
          sudo systemctl start docker.service
          sudo usermod -aG docker jenkins
          sudo service jenkins restart
          sudo curl -LO https://dl.k8s.io/release/v1.28.4/bin/linux/amd64/kubectl
          sudo curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl.sha256" #binary install
          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
          sudo mv kubectl /usr/local/bin/
          curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
          sudo mv /tmp/eksctl /usr/local/bin
          sudo chown -R jenkins:jenkins /var/lib/jenkins/.kube/
          sudo chmod -R 700 /var/lib/jenkins/.kube/



      Tags:
        - Key: Name
          Value: QuamTel-Pipeline

  JenkinsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Jenkins EC2 instance
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080

Outputs:
  JenkinsServerPublicIP:
    Description: Public IP address of the Jenkins server
    Value: !GetAtt JenkinsInstance.PublicIp
  JenkinsServerURL:
    Description: URL to access Jenkins server
    Value: !Sub 'http://${JenkinsInstance.PublicDnsName}:8080/'
